--- a/app/src/main/res/layout/fragment_battery.xml
+++ b/app/src/main/res/layout/fragment_battery.xml
@@ -1,119 +1,127 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/dashboard_background"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                tools:context=".MainActivity"
-                tools:ignore="NamespaceTypo">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/dashboard_background"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
 
     <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-    <RelativeLayout
-            android:id="@+id/rl_battery_fragment"
+    <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="25dp"
-            android:paddingEnd="10dp"
-            tools:ignore="RtlSymmetry">
+            android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/tvBattryMahValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center|start"
-                android:paddingStart="10dp"
-                android:textColor="@color/secondary_text"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:visibility="gone"
-                tools:ignore="HardcodedText" />
-
-        <ImageView
-                android:id="@+id/iv_battery_charging"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/pb_battery_fragment"
-                android:background="@android:color/transparent"
-                android:contentDescription="@null"
-                android:src="@mipmap/ic_battery"
-                android:tint="@color/battery" />
-
-        <ProgressBar
-                android:id="@+id/pb_battery_fragment"
-                style="@style/MyProgressBarTwoForBatteryFragment"
-                android:layout_width="60dp"
-                android:layout_height="26dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="end"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2dp"
-                android:indeterminateOnly="false"
-                android:max="100"
-                android:min="0"
-                tools:targetApi="o" />
-
-        <ImageView
-                android:id="@+id/iv_battery"
-                android:layout_width="8dp"
-                android:layout_height="9dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical|end"
-                android:background="@drawable/custom_battery_attach_view_for_battery_fragment"
-                android:contentDescription="@null"
-                android:tint="@color/battery" />
-    </RelativeLayout>
-
-    <TextView
-            android:id="@+id/tv_battery_fragment_percentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/rl_battery_fragment"
-            android:layout_marginEnd="10dp"
-            android:paddingEnd="10dp"
-            android:text="0%"
-            android:textColor="@color/network"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:ignore="MissingPrefix,RtlSymmetry" />
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/tv_battery_fragment_percentage"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-        <android.support.v7.widget.CardView
+        <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                app:cardBackgroundColor="@color/card_view_bg"
-                app:cardUseCompatPadding="true">
+                android:layout_height="wrap_content">
 
-            <ScrollView
+            <android.support.v7.widget.CardView
+                    android:id="@+id/cv_main_battery_info"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    app:cardBackgroundColor="@color/card_view_bg"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <TextView
+                            android:id="@+id/tvBattryMahValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
+
+                            android:gravity="center"
+
+                            android:textColor="@color/battery"
+                            android:textSize="25sp"
+                            android:textStyle="bold"
+                            android:visibility="gone"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <ImageView
+                            android:id="@+id/iv_battery_charging"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@null"
+                            android:src="@mipmap/ic_battery"
+                            android:tint="@color/battery"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/tv_battery_fragment_percentage"
+                            app:layout_constraintBottom_toBottomOf="@id/tv_battery_fragment_percentage"
+                            app:layout_constraintEnd_toStartOf="@id/pb_battery_fragment"/>
+
+                    <ProgressBar
+                            android:id="@+id/pb_battery_fragment"
+                            style="@style/MyProgressBarTwoForBatteryFragment"
+                            android:layout_width="60dp"
+                            android:layout_height="26dp"
+                            android:layout_margin="10dp"
+                            android:indeterminateOnly="false"
+                            android:max="100"
+                            android:min="0"
+                            tools:targetApi="o"
+                            app:layout_constraintStart_toEndOf="@id/iv_battery_charging"
+                            app:layout_constraintTop_toTopOf="@id/tv_battery_fragment_percentage"
+                            app:layout_constraintBottom_toBottomOf="@id/tv_battery_fragment_percentage"
+                            app:layout_constraintEnd_toStartOf="@id/tv_battery_fragment_percentage"/>
+
+                    <TextView
+                            android:id="@+id/tv_battery_fragment_percentage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="0%"
+                            android:textColor="@color/network"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toEndOf="@id/pb_battery_fragment"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/tvBattryMahValue"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    app:cardBackgroundColor="@color/card_view_bg"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cv_main_battery_info"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                 <include layout="@layout/battery_sub_view" />
-            </ScrollView>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-</RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+
+</LinearLayout>
