--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -1,92 +1,107 @@
-<android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/dashboard_background"
-        tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/dashboard_background"
+              android:orientation="vertical">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+    <include layout="@layout/toolbar" />
 
-        <include
-                android:id="@+id/relative"
-                layout="@layout/toolbar" />
+    <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <RelativeLayout
-                android:id="@+id/relative2"
+        <android.support.constraint.ConstraintLayout
+                android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/relative"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
             <ImageView
                     android:id="@+id/appIconImage"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
-                    android:contentDescription="@null" />
+                    android:contentDescription="@null"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
+                    android:id="@+id/cv_app_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_toEndOf="@+id/appIconImage"
-                    android:orientation="vertical">
+                    app:cardBackgroundColor="@color/card_view_bg"
+                    app:cardUseCompatPadding="true"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/appIconImage">
 
-                <TextView
-                        android:id="@+id/appName"
+                <android.support.constraint.ConstraintLayout
+                        android:layout_margin="10dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/dark_blue"
-                        android:textSize="18sp" />
+                        android:layout_height="wrap_content">
 
-                <TextView
-                        android:id="@+id/version"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                    <TextView
+                            android:id="@+id/appName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/user"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
 
-                        android:textColor="@color/dark_blue"
-                        android:textSize="14sp" />
+                    <TextView
+                            android:id="@+id/version"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/user"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/appName"/>
 
-                <TextView
-                        android:id="@+id/installedDateTime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:textColor="@color/dark_blue"
-                        android:textSize="14sp" />
+                    <TextView
+                            android:id="@+id/installedDateTime"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:textColor="@color/user"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/version"/>
 
-                <TextView
-                        android:id="@+id/lastUsedTime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/dark_blue"
-                        android:textSize="14sp" />
-            </LinearLayout>
-        </RelativeLayout>
+                    <TextView
+                            android:id="@+id/lastUsedTime"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/user"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/installedDateTime"/>
 
-        <LinearLayout
-                android:id="@+id/linear1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/relative2"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+
 
             <android.support.v7.widget.CardView
                     android:id="@+id/settingsCardView"
                     app:cardBackgroundColor="@color/card_view_bg"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="1"
-                    app:cardUseCompatPadding="true">
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/redirectCardView"
+                    app:layout_constraintTop_toBottomOf="@id/cv_app_info">
 
                 <ImageView
                         android:id="@+id/settingMenu"
@@ -100,18 +115,17 @@
 
             </android.support.v7.widget.CardView>
 
-
-
             <android.support.v7.widget.CardView
                     android:id="@+id/redirectCardView"
                     app:cardBackgroundColor="@color/card_view_bg"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    android:visibility="visible"
-                    app:cardUseCompatPadding="true">
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintStart_toEndOf="@id/settingsCardView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cv_app_info">
 
                 <ImageView
                         android:id="@+id/redirectApp"
@@ -124,69 +138,75 @@
                         android:visibility="visible" />
 
             </android.support.v7.widget.CardView>
-        </LinearLayout>
 
-        <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/linear1"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="@color/card_view_bg"
-                app:cardUseCompatPadding="true">
-
-            <ScrollView
+            <android.support.v7.widget.CardView
+                    android:id="@+id/cv_permission_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="none">
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_view_bg"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/settingsCardView">
 
-                <LinearLayout
+                <android.support.constraint.ConstraintLayout
+                        android:layout_margin="10dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content">
 
                     <TextView
                             android:id="@+id/packageNm"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="15dp"
                             android:text="@string/package_name"
-                            android:textColor="@color/font_black"
+                            android:textColor="@color/user"
                             android:textSize="15sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
 
                     <TextView
                             android:id="@+id/packageName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
                             android:textColor="@color/font_black"
-                            android:textSize="13sp" />
+                            android:textSize="13sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/packageNm"/>
 
                     <TextView
                             android:id="@+id/permissions"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="15dp"
                             android:text="@string/required_permissions"
-                            android:textColor="@color/font_black"
+                            android:textColor="@color/user"
                             android:textSize="15sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/packageName"/>
 
                     <TextView
                             android:id="@+id/req_permission"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/font_black"
-                            android:layout_marginStart="20dp"
                             android:textSize="13sp"
-                            tools:ignore="RtlSymmetry" />
-                </LinearLayout>
-            </ScrollView>
-        </android.support.v7.widget.CardView>
-    </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/permissions"/>
+
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</LinearLayout>
