--- a/app/src/main/res/layout/row_infomation.xml
+++ b/app/src/main/res/layout/row_infomation.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:padding="5dp">
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cv_ram_graph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="@color/card_view_bg"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp" >
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -69,11 +77,5 @@
                 android:tint="@color/secondary_text" />
     </RelativeLayout>
 
-    <View
-            android:layout_width="match_parent"
-            android:layout_height=".5dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:background="@color/divider" />
+</android.support.v7.widget.CardView>
 
-</LinearLayout>
